------------------------------------------------------------------------
r249 | Odica_Jaedenar | 2020-10-22 11:05:33 +0000 (Thu, 22 Oct 2020) | 1 line
Changed paths:
   M /trunk/LibTourist-3.0.lua

- Removed flight nodes from Exile's Reach
------------------------------------------------------------------------
