@@ -1,4 +1,4 @@
-## Interface: 90001
+## Interface: 90002
 ## LoadOnDemand: 1
 ## Title: Lib: Tourist-3.0
 ## Notes: A library to provide information about zones and instances.
