@@ -1,8 +1,12 @@
 ------------------------------------------------------------------------
-r249 | Odica_Jaedenar | 2020-10-22 11:05:33 +0000 (Thu, 22 Oct 2020) | 1 line
+r251 | Odica_Jaedenar | 2020-11-19 21:02:09 +0000 (Thu, 19 Nov 2020) | 4 lines
 Changed paths:
    M /trunk/LibTourist-3.0.lua
+   M /trunk/LibTourist-3.0.toc
 
-- Removed flight nodes from Exile's Reach
+- Updated TOC version to 90002
+- Exile's Reach and Darkmaul Citadel are now Friendly for both Horde and Alliance, instead of contested
+- Corrected group size for Darkmaul Citadel
+- Removed road connection between Tiragarde Sound and Tol Dagor
 ------------------------------------------------------------------------
 
